@@ -1,3 +1,8 @@
+18/01/08 Celine Scornavacca & Julien Dutheil 
+* New function getNode(name) in TreeTemplate
+* New function searNodeWithName dans TreeTemplateTools
+* Improved multitree support in Newick
+
 13/01/08 Julien Dutheil
 * DRASRTreeLikelihoodData class improved by using the SitePatterns class.
 
